# orbitkit

./: .gitignore  .readthedocs.yml  README.rst  REUSE.toml  justfile  pyproject.toml  requirements.txt
.ci/: requirements-build.in  requirements-build.txt  requirements-test.txt
.github/workflows/: ci.yml
docs/: api.rst  codegen.rst  conf.py  index.rst  justfile  literature.rst  models.rst  reference.rst
docs/_static/css/: custom.css
examples/: abrams.py  adjacency-matrix-spectral-analysis.py  de-pitta.py  fitzhugh-nagumo-omelchenko.py  fitzhugh-nagumo-omelchenko2013.py  hiv-culshaw-ruan-webb.py  hiv-culshawruanwebb2003-lyapunov.py  hiv-culshawruanwebb2003.py  kuramoto-abrams.py  kuramoto-abrams2008.py  kuramoto-order-parameter.py  kuramoto-schroder.py  kuramoto-schroder2017-order-parameter.py  kuramoto-schroder2017.py  kuramoto.py  lallouette-astrocyte-networks.py  li-rinzel.py  mackey-glass-lyapunov.py  mackeyglass1977-lyapunov.py  pfeuty.py  pfeuty2007.py  theta-fixed-points.py  theta-laing2018.py  visualize-adjacency.py  wang_buzsaki.py  wang_rinzel.py  wangbuzsaki1996.py  wangrinzel1992.py  wilson-cowan-conti2019.py  wilson-cowan-coombes2009.py  wilson-cowan-muldoon2016.py  wilson-cowan.py
src/chaotique/: cycles.py  typing.py  utils.py
src/orbitkit/: adjacency.py  behavior.py  clusters.py  cycles.py  metrics.py  synchrony.py  typing.py  utils.py  visualization.py
src/orbitkit/codegen/: __init__.py  jax.py  jitcdde.py  jitcode.py  jitcxde.py  numpy.py
src/orbitkit/models/: __init__.py  astrocyte.py  common.py  fitzhugh_nagumo.py  hiv.py  kuramoto.py  linear_chain_tricks.py  mackey_glass.py  pfeuty.py  rate_functions.py  symbolic.py  targets.py  targets_jitcode.py  theta.py  van_der_pol.py  wang_buzsaki.py  wang_rinzel.py  wilson_cowan.py
src/orbitkit/symbolic/: mappers.py  primitives.py
tests/: test_adjacency.py  test_behavior.py  test_codegen_jax.py  test_codegen_jitcdde.py  test_codegen_jitcode.py  test_codegen_numpy.py  test_cycles.py  test_distributed_delays.py  test_linear_chain_trick.py  test_metrics.py  test_models.py  test_utils.py  testlib.py
