[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.10",
]

[project]
name = "orbitkit"
version = "0.1.0"
description = "A set of Python utilities for analysing dynamical systems"
readme = "README.rst"
keywords = [
    "bifurcation",
    "cycle-detection",
    "dynamical-system",
]
license = { text = "MIT" }
maintainers = [
    { name = "Alexandru Fikl", email = "alexfikl@gmail.com" },
]
authors = [
    { name = "Alexandru Fikl", email = "alexfikl@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=2.1",
    "rich>=10",
    "scipy>=1.14",
]
optional-dependencies.dev = [
    "matplotlib",
    "pyproject-fmt",
    "reuse",
    "scienceplots",
    "typos",
    "uv",
]
optional-dependencies.docs = [
    "sphinx>=6",
    "sphinx-book-theme",
]
optional-dependencies.test = [
    "mypy",
    "pytest",
    "ruff",
    "scipy-stubs",
]
urls.Repository = "https://github.com/alexfikl/orbitkit"

[tool.ruff]
target-version = "py310"
line-length = 88

preview = true
lint.select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # flake8
    "F",   # flake8
    "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "NPY", # numpy
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RUF", # ruff
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # flake8
]
lint.ignore = [
    "A005",    # shadowing-builtin-module
    "E402",    # module-import-not-at-top-of-file
    "ISC001",  # single-line-implicit-string-concatenation
    "PLC0415", # import-outside-top-level
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-local-variables
    "PLR0917", # too-many-positional
    "PLR2004", # magic-value-comparison
    "S101",    # assert
    "S102",    # exec-builtin
    "UP037",   # quoted-annotation
]
lint.flake8-quotes.docstring-quotes = "double"
lint.flake8-quotes.inline-quotes = "double"
lint.flake8-quotes.multiline-quotes = "double"
lint.isort.known-first-party = [
    "orbitkit",
]
lint.isort.required-imports = [
    "from __future__ import annotations",
]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.mypy]
strict = true
python_version = "3.10"
hide_error_codes = false
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "scienceplots.*",
]
ignore_missing_imports = true
