[build-system]
build-backend = "hatchling.build"
requires = [
    "hatchling>=1.10",
]

[project]
name = "orbitkit"
version = "0.1.0"
description = "A set of Python utilities for analysing dynamical systems"
readme = "README.rst"
keywords = [
    "bifurcation",
    "cycle-detection",
    "dynamical-system",
]
license = "MIT"
maintainers = [
    { name = "Alexandru Fikl", email = "alexfikl@gmail.com" },
]
authors = [
    { name = "Alexandru Fikl", email = "alexfikl@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=2.1",
    "rich>=10",
    "scipy>=1.14",
]
# NOTE: this is just here because readthedocs does not know how to read dependency-groups
optional-dependencies.docs = [
    "jitcode>=1.7.3",
    "pymbolic>=2024.2",
    "sphinx>=6",
    "sphinx-book-theme",
    "sympy>=1.12",
]
urls.Documentation = "https://orbitkit.readthedocs.io"
urls.Repository = "https://github.com/alexfikl/orbitkit"

[dependency-groups]
dev = [ "pyproject-fmt", "reuse", "typos", "uv" ]
test = [ "pytest", "ruff", "scipy-stubs", "ty" ]
docs = [ "sphinx>=6", "sphinx-book-theme" ]
backends = [ "jax>=0.6", "jitcdde>=1.8.3", "jitcode>=1.7.3" ]
clustering = [ "leidenalg>=0.10" ]
codegen = [ "pymbolic>=2024.2", "sympy>=1.12" ]
extras = [ "networkx", "requests" ]
visualization = [ "matplotlib", "scienceplots" ]

[tool.ruff]
target-version = "py310"
line-length = 88
preview = true
lint.select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # flake8
    "F",   # flake8
    "FBT", # flake8-boolean-trap
    "G",   # flake8-logging-format
    "I",   # flake8-isort
    "ISC", # flake8-implicit-str-concat
    "N",   # pep8-naming
    "NPY", # numpy
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RUF", # ruff
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "W",   # flake8
]
lint.ignore = [
    "A005",    # shadowing-builtin-module
    "E402",    # module-import-not-at-top-of-file
    "ISC001",  # single-line-implicit-string-concatenation
    "N803",    # lowercase-argument
    "N806",    # lowercase-variable
    "N815",    # mixedcase-attribute
    "PLC0415", # import-outside-top-level
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments
    "PLR0914", # too-many-local-variables
    "PLR0915", # too-many-local-statements
    "PLR0917", # too-many-positional
    "PLR2004", # magic-value-comparison
    "RUF067",  # non-empty-init-module
    "S101",    # assert
    "S102",    # exec-builtin
    "UP037",   # quoted-annotation
]
lint.flake8-quotes.docstring-quotes = "double"
lint.flake8-quotes.inline-quotes = "double"
lint.flake8-quotes.multiline-quotes = "double"
lint.isort.known-first-party = [
    "orbitkit",
]
lint.isort.required-imports = [
    "from __future__ import annotations",
]

[tool.typos]
default.extend-words.inh = "inh"
default.extend-words.ND = "ND"

[tool.pytest]
ini_options.testpaths = "tests"
ini_options.addopts = [
    "-rswx",
    "--durations=25",
    "--capture=no",
    "--verbose",
]
